@@ -21,6 +21,7 @@ public class Bootstrapper {
 		instantiateBootstrappedSingletons();
 		createClasses();
 		makeClassSuperclassOfObjectsClass();
+		makeClassDescriptionSuperclassOfMetaclassClass();
 		reclassBootstrappedSingletons();
 		markBootstrapping(false);
 		instantiateNonBootstrappedSingletons();
@@ -34,11 +35,11 @@ public class Bootstrapper {
 		ProtoObject cls = Primitives.resolveObject(protoObject, "Class");
 		ProtoObject object = Primitives.resolveObject(protoObject, "Object");
 		object.cls().superclass(cls);
-//		System.out.println("Object......................... " + object);
-//		System.out.println("Object class................... " + object.cls());
-//		System.out.println("Object class class............. " + object.cls().cls() + " " + object.cls().cls().hashCode());
-//		System.out.println("Object class class superclass.. " + object.cls().cls().superclass());
-//		System.out.println("Object class class class....... " + object.cls().cls().cls());
+	}
+
+	private void makeClassDescriptionSuperclassOfMetaclassClass() throws ClassNotFoundException {
+		ProtoObject classDescription = Primitives.resolveObject(protoObject, "ClassDescription");
+		ProtoObject.METACLASS_INSTANCE.superclass0(classDescription);
 	}
 
 	private void tearDownProtoObject() {
